--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="./src/output.css">
 </head>
 <body>
     <header class="bg-[#DCE9E2] w-[100%] h-[100vh] mb-[50px] mb:h-auto">
@@ -20,7 +20,7 @@
                 <div>
                     <button class="border-[1px] border-solid border-[#00856F] p-[10px_26px] rounded-[40px] text-[#00856F] font-[700] mb:hidden">Agendar consulta</button>
                 </div>
-                <img class="hidden mb:block" src="./img/Icon (7).png" alt="">
+                <img class="hidden mb:block" src="./src/img/Icon (7).png" alt="">
             </nav>
             <section class="flex justify-between mb:flex-col mb:gap-[50px]">
                 <aside class="mb:text-center">
@@ -28,12 +28,12 @@
                     <h2 class="text-[#212529] font-[700] text-[54px] pb-[25px]">Assistência médica <br> simplificada para todos</h2>
                     <p class="text-[#495057] text-[18px] pb-[50px]">Os médicos da DoctorCare vão além dos sintomas para tratar a causa <br> raiz de sua doença e proporcionar uma cura a longo prazo.</p>
                     <div class="flex items-center gap-[5px]">
-                        <!-- <img src="./img/whatsapp.svg" alt=""> -->
+                        <!-- <img src="./src/img/whatsapp.svg" alt=""> -->
                         <button class="bg-[#00856F] p-[12px_36px] rounded-[40px] text-white font-[700] mb:ml-[90px]">Agende sua consulta</button>
                     </div>
                 </aside>
                 <aside>
-                    <img class="mt-[70px] mb:pb-[80px]" src="./img/image (37).png" alt="">
+                    <img class="mt-[70px] mb:pb-[80px]" src="./src/img/image (37).png" alt="">
                 </aside>
             </section>
         </header>
@@ -60,34 +60,34 @@
             </div>
             <div class="flex justify-between mt-[100px] mb:flex-col mb:gap-[50px] mb:w-[90%] mb:m-auto">
                 <article class="w-[350px] h-[220px] bg-[#FFFFFF] border-[1px] border-solid border-[#DCE9E2] rounded-[6px]">
-                    <img class="ml-[30px] mt-[30px]" src="./img/Group 2.png" alt="">
+                    <img class="ml-[30px] mt-[30px]" src="./src/img/Group 2.png" alt="">
                     <h2 class="font-[700] text-[#212529] text-[25px] pl-[30px] pt-[20px]">Problemas digestivos</h2>
                     <p class="text-[#495057] text-[16px] pl-[30px] pt-[10px]">Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet sint. <br> Velit officia consequat duis enim.</p>
                 </article>
                 <article class="w-[350px] h-[220px] bg-[#FFFFFF] border-[1px] border-solid border-[#DCE9E2] rounded-[6px]">
-                    <img class="ml-[30px] mt-[30px]" src="./img/Group 2.png" alt="">
+                    <img class="ml-[30px] mt-[30px]" src="./src/img/Group 2.png" alt="">
                     <h2 class="font-[700] text-[#212529] text-[25px] pl-[30px] pt-[20px]">Saúde Hormonal</h2>
                     <p class="text-[#495057] text-[16px] pl-[30px] pt-[10px]">Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet sint. <br> Velit officia consequat duis enim.</p>
                 </article>
                 <article class="w-[350px] h-[220px] bg-[#FFFFFF] border-[1px] border-solid border-[#DCE9E2] rounded-[6px]">
-                    <img class="ml-[30px] mt-[30px]" src="./img/Group 2.png" alt="">
+                    <img class="ml-[30px] mt-[30px]" src="./src/img/Group 2.png" alt="">
                     <h2 class="font-[700] text-[#212529] text-[25px] pl-[30px] pt-[20px]">Bem-estar mental</h2>
                     <p class="text-[#495057] text-[16px] pl-[30px] pt-[10px]">Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet sint. <br> Velit officia consequat duis enim.</p>
                 </article>
             </div>
             <div class="flex justify-between mt-[50px] mb:flex-col mb:gap-[50px] mb:w-[90%] mb:m-auto">
                 <article class="w-[350px] h-[220px] bg-[#FFFFFF] border-[1px] border-solid border-[#DCE9E2] rounded-[6px]">
-                    <img class="ml-[30px] mt-[30px]" src="./img/Group 2.png" alt="">
+                    <img class="ml-[30px] mt-[30px]" src="./src/img/Group 2.png" alt="">
                     <h2 class="font-[700] text-[#212529] text-[25px] pl-[30px] pt-[20px]">Cuidados Pediátricos</h2>
                     <p class="text-[#495057] text-[16px] pl-[30px] pt-[10px]">Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet sint. <br> Velit officia consequat duis enim.</p>
                 </article>
                 <article class="w-[350px] h-[220px] bg-[#FFFFFF] border-[1px] border-solid border-[#DCE9E2] rounded-[6px]">
-                    <img class="ml-[30px] mt-[30px]" src="./img/Group 2.png" alt="">
+                    <img class="ml-[30px] mt-[30px]" src="./src/img/Group 2.png" alt="">
                     <h2 class="font-[700] text-[#212529] text-[25px] pl-[30px] pt-[20px]">Autoimune e Inflamação</h2>
                     <p class="text-[#495057] text-[16px] pl-[30px] pt-[10px]">Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet sint. <br> Velit officia consequat duis enim.</p>
                 </article>
                 <article class="w-[350px] h-[220px] bg-[#FFFFFF] border-[1px] border-solid border-[#DCE9E2] rounded-[6px]">
-                    <img class="ml-[30px] mt-[30px]" src="./img/Group 2.png" alt="">
+                    <img class="ml-[30px] mt-[30px]" src="./src/img/Group 2.png" alt="">
                     <h2 class="font-[700] text-[#212529] text-[25px] pl-[30px] pt-[20px]">Saúde do Coração</h2>
                     <p class="text-[#495057] text-[16px] pl-[30px] pt-[10px]">Amet minim mollit non deserunt <br> ullamco est sit aliqua dolor do amet sint. <br> Velit officia consequat duis enim.</p>
                 </article>
@@ -96,7 +96,7 @@
     </section>
     <section class="max-w-[1200px] m-auto flex justify-between gap-[100px] mb-[150px] mb:flex-col-reverse mb:w-[90%] mb:m-auto ">
         <aside>
-            <img src="./img/Pic.png" alt="">
+            <img src="./src/img/Pic.png" alt="">
         </aside>
         <aside>
             <h3 class=" text-[#00856F] font-[600] text-[18px] pt-[20px] pb-[20px] mb:mt-[100px]">SOBRE NÓS</h3>
@@ -108,28 +108,28 @@
         <aside>
             <h2 class=" font-[700] text-[45px] text-[#212529] pb-[50px] mb:mt-[150px]">Entre em contato <br> com a gente!</h2>
             <div class="flex items-center gap-[10px] pb-[20px]">
-                <img src="./img/map-pin 1.png" alt="">
+                <img src="./src/img/map-pin 1.png" alt="">
                 <p class="text-[#384633]">R. Amauri Souza, 346</p>
             </div>
             <div class="flex items-center gap-[10px] pb-[50px]">
-                <img src="./img/mail 1 copy.png" alt="">
+                <img src="./src/img/mail 1 copy.png" alt="">
                 <p class="text-[#384633] ">contato@doctorcare.com</p>
             </div>
             <button class="bg-[#00856F] p-[12px_36px] rounded-[40px] text-white font-[700] mb:ml-[90px]">Agende sua consulta</button>
         </aside>
         <aside>
-            <img src="./img/pic (1).png" alt="">
+            <img src="./src/img/pic (1).png" alt="">
         </aside>
     </section>
     <footer class="bg-[#00856F] w-[100%] h-[270px] mb:h-auto mb:mt-[150px]">
         <footer class="max-w-[1200px] m-auto flex justify-between mb:flex-col mb:gap-[50px] mb:w-[90%] mb:m-auto">
             <aside class="pt-[100px]">
-                <img class="pb-[30px]" src="./img/LOGO (4).png" alt="">
+                <img class="pb-[30px]" src="./src/img/LOGO (4).png" alt="">
                 <p class="text-[#FFFAF1] pb-[10px]">©2022 - DoctorCare.</p>
                 <p class="text-[#FFFAF1] pb-[20px]">Todos os direitos reservados.</p>
             </aside>
             <aside class="pt-[150px] mb:pt-[5px] pb-[40px]">
-                <img src="./img/Redes sociais.png" alt="">
+                <img src="./src/img/Redes sociais.png" alt="">
             </aside>
         </footer>
     </footer>
