--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="bg-[#DCE9E2] w-[100%] h-[100vh] mb-[50px] mb:h-auto">
         <header class="max-w-[1200px] m-auto  mb:w-[90%] mb:m-auto">
             <nav class="flex justify-between items-center pt-[20px]">
-                <img src="./img/Logo (3).png" alt="">
+                <img src=".src/img/Logo (3).png" alt="">
                 <div class="flex items-center gap-[40px]">
                     <p class="text-[#00856F] text-[18px] font-[700] border-b-1px border-solid border-[#00856F] mb:hidden">Início</p>
                     <p class="text-[#00856F] text-[18px] mb:hidden">Sobre</p>
